# flake-fmt

./: .gitignore  Cargo.toml  README.md  checks.nix  flake-fmt.sh  flake.nix  formatter.nix  package.nix  pyproject.toml  test_flake_fmt.py
.github/workflows/: radicle.yaml  update-flake-inputs.yml
crates/flake-fmt/: Cargo.toml
crates/flake-fmt-trace/: Cargo.toml
crates/flake-fmt-trace/src/: lib.rs
crates/flake-fmt/src/: main.rs
crates/flake-fmt/tests/: trace_shim.rs
flake_fmt/: __init__.py  __main__.py
